# helloworld

./: .gitlab-ci.yml  Dockerfile  compilation_script.sh
hello-world-lib-problem/: README.md  conanfile.py
hello-world-lib-problem/src/: CMakeLists.txt  library.h
hello-world-problem/: CMakeLists.txt  conanfile.py
hello-world-problem/src/: main.cpp
